--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,33 +8,34 @@
     "start": "next start"
   },
   "dependencies": {
-    "radix-ui": "^1.4.2",
+    "@ai-sdk/react": "^2.0.39",
+    "@netlify/plugin-nextjs": "^5.13.1",
+    "@orpc/client": "^1.8.6",
+    "@orpc/tanstack-query": "^1.8.6",
     "@tanstack/react-form": "^1.12.3",
+    "@tanstack/react-query": "^5.85.5",
+    "ai": "^5.0.39",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
+    "streamdown": "^1.2.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
-    "zod": "^4.0.2",
-    "@orpc/tanstack-query": "^1.8.6",
-    "@orpc/client": "^1.8.6",
-    "@tanstack/react-query": "^5.85.5",
-    "ai": "^5.0.39",
-    "@ai-sdk/react": "^2.0.39",
-    "streamdown": "^1.2.0"
+    "zod": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.10",
-    "typescript": "^5",
-    "@tanstack/react-query-devtools": "^5.85.5"
+    "typescript": "^5"
   }
 }
